--- a/css/profile.css
+++ b/css/profile.css
@@ -43,7 +43,6 @@
     position: relative;
     display: flex;
     padding: 1.6rem 2.6rem;
-    align-items: center;
     min-height: calc(150px + 2.6rem);
     background-color: var(--block-color);
     border-radius: 0 0 2rem 2rem;
@@ -65,6 +64,7 @@
 
 .profile__user-info .textinfo {
     margin-left: calc(250px + 1.6rem);
+    margin-top: 2.6rem;
 }
 
 .profile__user-info .first-and-second-names {
@@ -188,9 +188,13 @@
 }
 
 .profile__user-info .description {
-    margin-top: 1.6rem;
+    margin-top: 1.1rem;
     line-height: 1;
     color: var(--else-text-color-50);
+}
+
+.profile__user-info .not-friend {
+    margin-top: 1.6rem;
 }
 
 .profile__user-info a.description {
@@ -198,7 +202,7 @@
     text-decoration: underline;
     display: block;
     font-size: var(--font-size-1);
-    margin-top: 2.6rem;
+    margin-top: 1.1rem;
     line-height: 1;
     transition: 0.2s;
 }
@@ -1183,6 +1187,7 @@ span.for-friends {
     transition: 0.2s;
     font-size: var(--font-size-1);
     color: var(--else-text-color-50);
+    z-index: 69;
 }
 
 .case-trophies .trophy span::before {
