--- a/css/people.css
+++ b/css/people.css
@@ -141,8 +141,6 @@
 }
 
 .requests .current-user-info p {
-    color: var(--main-accent-color);
-    font-weight: 400;
     cursor: pointer;
 }
 
@@ -578,13 +576,14 @@
 
 .blossom-status {
     font-weight: 600;
+    font-size: var(--font-size-2);
     background: linear-gradient(-135deg, var(--posts-color), var(--likes-color), var(--comments-color));
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
     align-items: center;
     margin-left: auto;
-    gap: 0.625rem;
+    gap: 0.39rem;
     display: flex;
 }
 
@@ -598,10 +597,10 @@
 
 .blossom-status img {
     border-radius: 0;
-    max-width: 24px;
-    max-height: 24px;
-    min-height: 24px;
-    min-width: 24px;
+    max-width: 16px;
+    max-height: 16px;
+    min-height: 16px;
+    min-width: 16px;
 }
 
 .user-in-top {
@@ -717,14 +716,32 @@
     color: var(--main-text-color);
 }
 
-.users-requests img {
+.users-requests .other-user-avatar {
     width: 50px;
     height: 50px;
     object-fit: cover;
     border-radius: 50%;
+    cursor: pointer;
+    transition: 0.2s;
+}
+
+.users-requests .other-user-avatar:hover {
+    opacity: 80%;
+}
+
+.users-requests .status {
+    position: absolute;
+    top: calc(3.3rem + 1rem);
+    left: calc(3.4rem + 1.6rem);
+    transform: rotate(4deg);
+    min-height: 19px;
+    max-height: 19px;
+    min-width: 19px;
+    max-width: 19px;
 }
 
 .request-from-user {
+    position: relative;
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -744,16 +761,24 @@
     display: flex;
     flex-direction: column;
     gap: 0.4rem;
+    font-size: var(--font-size-1);
+    cursor: pointer;
+    color: var(--else-text-color-50);
 }
 
 .request-from-user .user-info p:first-child {
     font-size: var(--font-size-2);
+    color: var(--main-text-color);
     font-weight: 600;
+    cursor: pointer;
 }
 
-.request-from-user .user-info p:last-child {
-    font-size: var(--font-size-1);
-    color: var(--else-text-color-50);
+.request-from-user .user-info p {
+    transition: 0.2s;
+}
+
+.request-from-user .user-info p:hover {
+    opacity: 80%;
 }
 
 .request-from-user svg {
